refactor(spring): Allow security manager for Java 17+